Provide  JUnit test real-time output in a `Tests` output view.
Signed-off-by: davidfestal <dfestal@redhat.com>